# ibus-kcm

./: CMakeLists.txt
src/: ibus-settings.hpp
